tests/baselines/reference/callSignaturesShouldBeResolvedBeforeSpecialization(strict=true).errors.txt
callSignaturesShouldBeResolvedBeforeSpecialization.ts(8,5): error TS2454: Variable 'test' is used before being assigned.
callSignaturesShouldBeResolvedBeforeSpecialization.ts(9,5): error TS2454: Variable 'test' is used before being assigned.
callSignaturesShouldBeResolvedBeforeSpecialization.ts(9,10): error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.


==== callSignaturesShouldBeResolvedBeforeSpecialization.ts (3 errors) ====
    interface I1<T> {
        (value: T): void;
        field1: I1<boolean>;
    }
    
    function foo() {
        var test: I1<string>;
        test("expects boolean instead of string"); // should not error - "test" should not expect a boolean
        ~~~~
!!! error TS2454: Variable 'test' is used before being assigned.
        test(true); // should error - string expected
        ~~~~
!!! error TS2454: Variable 'test' is used before being assigned.
             ~~~~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
    }